app/assets/stylesheets/custom.css.scss
body {
  padding-bottom: 20px;
  padding-top: 45px;
}

#board-title {
  h2, h3{
    line-height: 16px
  }
  a {
    color: #222;
  }
}

.panel {
  padding: 8px;
  word-wrap: break-word;
  overflow: hidden;
}

.comment {
  padding-top: 10px;
  padding-bottom: 5px;
  line-height: 1.6;
}

.discussion-panel {
  background: #FDFDFD;
}

.post-panel {
  background: #F1F1F1;
  margin-bottom: 5px;
}

